Add some css Add side nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Meme Generator</title>
 </head>
-<body>
-  
+<body class="main-layout">
+  <header class="main-header flex space-between align-center full">
+    <div class="logo flex"><img src="img/memegen-logo.png" alt="Meme Generator Logo"></div>
+    <nav class="main-nav">
+      <ul class="main-nav-list flex clean-list">
+        <li><a href="#">Memes</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">About</a></li>
+      </ul> 
+    </nav>
+  </header>
+  <aside class="side-bar-nav">
+    <ul>
+      <li><a href="#">Funny</a></li>
+      <li><a href="#">Animal</a></li>
+      <li><a href="#">Men</a></li>
+      <li><a href="#">Woman</a></li>
+    </ul>
+  </aside>
 </body>
 </html>
