Fix some css issues Add getMeme()

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="canvas-actions"></div>
     </div>
   </main>
-  <footer class="footer-layout flex justify-center">Made without ❤️ by Eden Spivak</footer>
+  <footer class="footer-layout flex justify-center align-center">Made without ❤️ by Eden Spivak</footer>
 
   <script src="js/controllers/main.controller.js"></script>
   <script src="js/services/gallery.service.js"></script>
