--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Meme Generator</title>
 </head>
 <body class="main-layout" onload="onInit()">
-  <header class="main-header flex space-between align-center">
+  <header class="main-header flex space-between align-center full">
     <div class="logo flex"><img src="assets/memegen-logo.png" alt="Meme Generator Logo"></div>
     <input type="search" placeholder="Search">
     <nav class="main-nav">
@@ -81,7 +81,7 @@
       </div>
     </div>
   </main>
-  <footer class="footer-layout flex justify-center align-center">Made without ❤️ by Eden Spivak</footer>
+  <footer class="footer-layout flex justify-center align-center full">Made without ❤️ by Eden Spivak</footer>
 
   <script src="js/controllers/main.controller.js"></script>
   <script src="js/services/gallery.service.js"></script>
