--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="canvas-actions flex column">
 
         <!-- Top Section, Actions -->
-        <div class="edit-text flex space-between">
+        <div class="edit-text flex space-between align-center">
           <h2 class="edit-text-title">Edit Text Lines</h2>
           <div class="edit-text-actions flex">
             <h3>1/2</h3>
