--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="edit-text-actions flex align-center">
             <h3>1/2</h3>
             <button><i class="fa-solid fa-shuffle"></i></button>
-            <button><i class="fa-regular fa-square-plus"></i></button>
+            <button onclick="onAddText()"><i class="fa-regular fa-square-plus"></i></button>
             <button><i class="fa-regular fa-square-minus"></i></button>
           </div>
         </div>
